Fixes gap in fgs

--- a/cac-farmshop-client/src/index.css
+++ b/cac-farmshop-client/src/index.css
@@ -129,7 +129,7 @@
 .header-one {
   font:  normal 37px / 39px "Playfair Display";
   font-weight: 300;
-  padding-top: 30px;
+  padding: 30px 0 0 42px;
 }
 
 .mobile-mini-widgets {
@@ -283,7 +283,7 @@ body {
 
 .fg-grid {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 300px 300px 300px;
   grid-row-gap: 30px ;
 }
 
